@@ -1,5 +1,3 @@
-import javafx.application.ConditionalFeature
-
 group 'io.github.morichan'
 version '0.0.1-SNAPSHOT'
 
@@ -95,11 +93,26 @@ junitPlatformTest {
 
 test {
     systemProperties 'property': 'value'
-    doFirst {
-        allJvmArgs = allJvmArgs.collect { String arg -> // This was the only way to override java.ext.dirs
-            arg.startsWith("-Djava.ext.dirs") ? "${arg}${java.io.File.pathSeparator}${rootProject.file('lib/ext')}" : arg
-        }
+}
+
+class OSChecker{
+    static String getFamily(){
+        String os=System.getProperty("os.name")
+        if(os==null)
+            return ""
+        else if(os.startsWith("Windows"))
+            return "windows"
+        else if(os.startsWith("Mac OS X"))
+            return "mac"
+        else if(os.startsWith("Linux"))
+            return "unix"
+        return ""
     }
+}
+println OSChecker.getFamily()
+
+if (OSChecker.getFamily() != "windows") {
+    test.exclude "io/github/morichan/retuss/window/ControllerTest.class"
 }
 
 junitPlatform.enableStandardTestTask true
